[gd_scene load_steps=7 format=3 uid="uid://bmody1xq576q8"]

[ext_resource type="Script" uid="uid://c4ex41gpomuda" path="res://scripts/environment/pickup_items/chest.gd" id="1_hmx5h"]
[ext_resource type="Texture2D" uid="uid://d0mlghib2apim" path="res://assets/sprites/pickup_items/Chest_1.png" id="1_rmt15"]
[ext_resource type="PackedScene" uid="uid://b8rtwryepqr5w" path="res://scenes/components/interact_component.tscn" id="2_vkxtq"]
[ext_resource type="AudioStream" uid="uid://ck6hf5re1vk6b" path="res://assets/sounds/sfx/chest.wav" id="4_i673u"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vkxtq"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_hmx5h"]
size = Vector3(0.3, 0.3, 0.3)

[node name="Chest" type="Node3D"]
script = ExtResource("1_hmx5h")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
billboard = 2
texture_filter = 0
texture = ExtResource("1_rmt15")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_mask = 6

[node name="BodyCollision" type="CollisionShape3D" parent="StaticBody3D"]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_vkxtq")

[node name="InteractComponent" parent="." instance=ExtResource("2_vkxtq")]

[node name="InteractCollision" type="CollisionShape3D" parent="InteractComponent"]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_hmx5h")

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_i673u")
bus = &"SFX"
